--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,7 @@
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
-      <%= "商品名" %>
+      <%= @item.name %>
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image, class:"item-box-img" if @item.image.attached?%>
@@ -33,7 +33,7 @@
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
       <% elsif %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-        <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+        <%= link_to '購入画面に進む', item_orders_path(@item.id),class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
       <% end %>
