--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,11 +136,12 @@
                 <%= image_tag item.image, class: "item-img" %>
 
                 <%# 商品が売れていればsold outを表示しましょう %>
-                <!-- <div class='sold-out'>
+              <% if item.order %>
+                <div class='sold-out'>
                   <span>Sold Out!!</span>
-                </div> -->
+                </div>
+              <% end %>
                 <%# //商品が売れていればsold outを表示しましょう %>
-
               </div>
               <div class='item-info'>
                 <h3 class='item-name'>
