--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,11 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image, class:"item-box-img" if @item.image.attached?%>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# if @items.blank? %>
-        <!-- <div class='sold-out'>
+      <% if @item.order %>
+        <div class='sold-out'>
           <span>Sold Out!!</span>
-        </div> -->
-      <%# end %>
+        </div>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
