--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,7 +4,7 @@
   <div class='transaction-main'>
     <h1 class='transaction-title-text'>
       購入内容の確認
-      
+
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
@@ -84,7 +84,7 @@
           <label class="form-text">郵便番号</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field :postal_code_id, class:"input-default", id:"postal-code", placeholder:"例）123-4567", maxlength:"8" %>
+        <%= f.text_field :postal_code, class:"input-default", id:"postal-code", placeholder:"例）123-4567", maxlength:"8" %>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
