--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,17 +31,18 @@
         <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
         <p class='or-text'>or</p>
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-      <% elsif %>
+      <% end %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
+      <% if @item.order.blank? ==@item.user_id %>
         <%= link_to '購入画面に進む', item_orders_path(@item.id),class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
-      <% end %>
+    <% end %>
 
     <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @item.item_explain_box %></span>
     </div>
     <table class="detail-table">
       <tbody>
